@@ -1,15 +1,0 @@
-<?php
-
-/**
- * myDoctrineRecord filter form.
- *
- * @package    filters
- * @subpackage myDoctrineRecord *
- * @version    SVN: $Id: sfDoctrineFormFilterTemplate.php 11675 2008-09-19 15:21:38Z fabien $
- */
-class myDoctrineRecordFormFilter extends BasemyDoctrineRecordFormFilter
-{
-  public function configure()
-  {
-  }
-}
