@@ -1,0 +1,16 @@
+<?php
+
+/**
+ * AuthorInheritance
+ * 
+ * This class has been auto-generated by the Doctrine ORM Framework
+ * 
+ * @package    ##PACKAGE##
+ * @subpackage ##SUBPACKAGE##
+ * @author     ##NAME## <##EMAIL##>
+ * @version    SVN: $Id: Builder.php 5925 2009-06-22 21:27:17Z jwage $
+ */
+class AuthorInheritance extends BaseAuthorInheritance
+{
+
+}
