@@ -1,0 +1,7 @@
+<?php
+/**
+ */
+class AuthorInheritanceTable extends AuthorTable
+{
+
+}
